test/visibility/rename/badOldName.good
badOldName.chpl:7: In module 'M':
badOldName.chpl:8: error: cannot rename symbol 'br' as it is not defined in 'Foo'
